--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,26 @@
 {
-  "name" : "Spelunky Save Editor",
-  "description" : "Edit your Spelunky save file in place.",
-  "version" : "0.0.1",
-  "manifest_version" : 2,
-  "app" : {"background" : {"scripts" : ["background.js"]}},
-  "icons" : {"64" : "robot-icon.png"}
+  "name": "Spelunky Save Editor",
+  "description": "Edit your Spelunky save file in place.",
+  "version": "0.0.1",
+  "manifest_version": 2,
+  "app": {
+    "background": {
+      "scripts": [
+        "background.js"
+      ]
+    }
+  },
+  "icons": {
+    "64": "robot-icon.png"
+  },
+  "permissions": [
+    "storage",
+    {
+      "fileSystem": [
+        "write",
+        "retainEntries",
+        "directory"
+      ]
+    }
+  ]
 }
