Remove directory permission.

--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,7 @@
     {
       "fileSystem": [
         "write",
-        "retainEntries",
-        "directory"
+        "retainEntries"
       ]
     }
   ]
